--- a/tugas1/index.html
+++ b/tugas1/index.html
@@ -15,7 +15,7 @@
 
     <h2>List Hobi</h2>
     <!-- Tampilkan semua hobi -->
-    <ul id="listhobi"></ul>
+    <ul id="listhobi">Baca, Bermaingame, Belajar Coding</ul>
     <script src="script.js"></script>
     
 </body>
