--- a/tugas2/index.html
+++ b/tugas2/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
      <h1>Menggunakan Algoritma Pemrograman</h1>
-    NPM : <label id="npm"></label>
-    <br>Nama : <label id="nama"></label>
-    <br>Nilai Tertinggi : <label id="nilaimax"></label>
+    NPM : <label id="npm">2226240001</label>
+    <br>Nama : <label id="nama">Arif</label>
+    <br>Nilai Tertinggi : <label id="nilaimax">90</label>
     
     <script src="script.js"></script>
 </body>
